# supersonic

./: Cargo.toml  README.md
assets/models/: drone-model.glb
assets/shaders/: post_processing.wgsl  thermal_material.wgsl
src/: camera.rs  main.rs  materials.rs  player.rs  post_processing.rs  ui.rs  world.rs
src/tests/: mod.rs  player.rs  post_processing.rs
