[package]
name = "supersonic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy-inspector-egui = "0.24.0"
bevy_rapier3d = { version = "0.26.0", features = [ "simd-stable", "debug-render-3d"]}
bevy_third_person_camera = "0.1.10"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
